--- a/index.html
+++ b/index.html
@@ -8,39 +8,60 @@
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            color: #333;
-            max-width: 600px;
-            margin: 0 auto;
+            color: #e0e0e0;
+            background-color: #1a1a1a;
+            margin: 0;
             padding: 20px;
-            text-align: center;
+            display: flex;
+            justify-content: center;
+            min-height: 100vh;
+        }
+        .container {
+            max-width: 600px;
+            width: 100%;
         }
         h1 {
-            color: #2c3e50;
+            color: #4ecdc4;
+            text-align: center;
+        }
+        h2 {
+            color: #f7fff7;
         }
         code {
-            background-color: #f4f4f4;
-            border: 1px solid #ddd;
+            background-color: #2c2c2c;
+            border: 1px solid #444;
             border-radius: 4px;
             padding: 2px 5px;
             font-family: monospace;
+            display: inline-block;
         }
         .script {
             margin-bottom: 20px;
         }
+        .note {
+            background-color: #2c3e50;
+            padding: 10px;
+            border-radius: 4px;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
-    <h1>Quick Guide: Custom Pi Scripts</h1>
-    <div class="script">
-        <h2>Setup Script</h2>
-        <p>Run this to update, upgrade, and install tmux:</p>
-        <code>curl -sSL pi.vojtikdortik.eu/setup | bash</code>
+    <div class="container">
+        <h1>Quick Guide: Custom Pi Scripts</h1>
+        <div class="script">
+            <h2>Setup Script</h2>
+            <p>Run this to update, upgrade, and install tmux:</p>
+            <code>curl -sSL pi.vojtikdortik.eu/setup | bash</code>
+        </div>
+        <div class="script">
+            <h2>Python Script</h2>
+            <p>Run this to install Python:</p>
+            <code>curl -sSL pi.vojtikdortik.eu/python | bash</code>
+        </div>
+        <div class="note">
+            <strong>Note:</strong> Always review scripts before running them.
+        </div>
     </div>
-    <div class="script">
-        <h2>Python Script</h2>
-        <p>Run this to install Python:</p>
-        <code>curl -sSL pi.vojtikdortik.eu/python | bash</code>
-    </div>
-    <p><strong>Note:</strong> Always review scripts before running them.</p>
 </body>
 </html>
