--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>Quick Guide: Custom Pi Scripts</h1>
+        <h1>Quick Script Guide</h1>
         <div class="script">
-            <h2>Setup Script</h2>
-            <p>Run this to update, upgrade, and install tmux:</p>
-            <code>curl -sSL pi.vojtikdortik.eu/setup | bash</code>
+            <h2>Install tmux </h2>
+            <p>Run this to update, and install tmux:</p>
+            <code>curl -sSL pi.vojtikdortik.eu/tmux | bash</code>
         </div>
         <div class="script">
-            <h2>Python Script</h2>
-            <p>Run this to install Python:</p>
-            <code>curl -sSL pi.vojtikdortik.eu/python | bash</code>
+            <h2>Install latest geckodriver</h2>
+            <p>Run this to install latest geckodriver:</p>
+            <code>curl -sSL pi.vojtikdortik.eu/geckodriver | bash</code>
         </div>
         <div class="note">
             <strong>Note:</strong> Always review scripts before running them.
